--- a/src/scenes/document/AddDocument.css
+++ b/src/scenes/document/AddDocument.css
@@ -1,6 +1,7 @@
 /* Container and Layout */
 .categories-container {
   margin: 20px;
+  margin-top: 25px;
 }
 
 .categories-header-text {
@@ -13,11 +14,14 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  margin-top: 15px;
 }
 
 /* Search Bar */
 .search-field {
   width: 300px;
+  height: 36px;
+  border-radius: 4px;
   background-color: white;
 }
 
